# comsm0010_cc_public

./: README.md
cnd/: .gitignore  build.sbt  nonce.py  nonce_finder
cnd/src/main/resources/: logback.xml
cnd/src/main/scala/net/kurobako/cnd/: Bench.scala  BinResult.scala  Cnd.scala  Main.scala
nonce_finder/: .gitignore  CMakeLists.txt  README.md  main.cpp  nonce.go
